update readme, add java docs